# Projekt-Inzynierski-STOS

./: readme.md
environment/: docker-compose-swarm.yml  docker-compose.yml
environment/eval/: Dockerfile  go.mod  go.sum  main.go  readme.md
environment/k8s/: deploy.sh  docker-export.sh  elasticsearch-config.yaml  evaluator-deployment.yaml  ingress-controller.yaml  kibana-config.yaml  readme.md  worker-deployment.yaml
environment/worker/: Dockerfile  pom.xml
environment_graylog/: docker-compose.yml
environment_graylog/eval/: Dockerfile  go.mod  main.go
environment_graylog/worker/: Dockerfile  pom.xml
logging-system/: .gitignore  docker-compose.yml  logstash.conf  test.py  troubleshooting.txt
messaging/: .gitignore  docker-compose.yml  messages.proto  readme.md
messaging/evaluator/: Dockerfile  docker-compose.yml  evaluator-producer.py  evaluator.py  kafka-consumer.py  messages.py  messages_pb2.py  messages_pb2.pyi  rabbitmq-consumer.py  rabbitmq-producer.py  requirements.txt  run.bat
messaging/file-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  readme.md
messaging/file-server/src/: lib.rs  main.rs
messaging/file-server/src/file_service/: mod.rs
messaging/file-server/src/file_service/filesystem/: mod.rs  tests.rs
messaging/file-server/src/file_service/redis_repo/: mod.rs  tests.rs
messaging/file-server/src/filesystem/: mod.rs
messaging/file-server/src/rabbit/: handlers.rs  messages.rs  mod.rs
messaging/file-server/src/redis_repo/: mod.rs
messaging/file-server/src/tests/: mod.rs  redis_tests.rs
(+33 files in other folders)
