[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
prost = "0.12.3"
redis = {version="0.25.2", features = ["aio", "tokio-comp"]}
tokio = {version = "1.36.0", features = ["full"]}

[build-dependencies]
prost-build = "0.12.3"

[features]
benchmark = []
