[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
deadpool = "0.11.0"
deadpool-lapin = {version = "0.12.0", features = ["rt_tokio_1"]}
lapin = "2.3.1"
prost = "0.12.3"
redis = {version="0.25.2", features = ["aio", "tokio-comp"]}
tokio = {version = "1.36.0", features = ["full"]}
tokio-amqp = "2.0.0"
futures = { version = "0.3.17", default-features = true }
chrono = "0.4.37"

[build-dependencies]
prost-build = "0.12.3"

[features]
benchmark = []
